--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@pedrocid/music-mcp",
-  "version": "1.0.1",
-  "description": "MCP server for controlling Apple Music on macOS (v1.0.1)",
+  "version": "1.0.2",
+  "description": "MCP server for controlling Apple Music on macOS (v1.0.2)",
   "main": "dist/index.js",
   "bin": {
     "music-mcp": "dist/index.js"
@@ -50,7 +50,8 @@
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.15.1",
     "pino": "^8.0.0",
-    "applescript": "^1.0.0"
+    "applescript": "^1.0.0",
+    "pino-pretty": "^10.0.0"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
@@ -58,7 +59,6 @@
     "@typescript-eslint/parser": "^6.0.0",
     "eslint": "^8.0.0",
     "typescript": "^5.0.0",
-    "vitest": "^1.0.0",
-    "pino-pretty": "^10.0.0"
+    "vitest": "^1.0.0"
   }
 }
