chore: include manifest.json in npm package for Desktop Extension builds

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "files": [
     "dist/",
     "README.md",
-    "LICENSE"
+    "LICENSE",
+    "manifest.json"
   ],
   "scripts": {
     "build": "tsc && npm run postbuild",
