fix: use vitest run instead of watch mode for test script
- Change 'test' script from 'vitest' to 'vitest run' to exit after tests complete
- Add 'test:watch' script for development with watch mode
- Fixes prepare-release script hanging on tests

--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "build": "tsc && npm run postbuild",
     "postbuild": "chmod +x dist/index.js && cp -r src/scripts dist/",
     "prepublishOnly": "npm run build && npm run test",
-    "test": "vitest",
+    "test": "vitest run",
+    "test:watch": "vitest",
     "test:e2e": "vitest run --config vitest.e2e.config.ts",
     "lint": "eslint src --ext .ts",
     "prepare-release": "node scripts/prepare-release.js",
